Fix new-password.html login check

--- a/src/main/resources/templates/new-password.html
+++ b/src/main/resources/templates/new-password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <title>New Password | Book Your Shelf</title>
@@ -8,7 +8,7 @@
     <meta name="description" content="Little Closet template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" th:href="@{styles/bootstrap-4.1.2/bootstrap.min.css}">
-    <link  rel="stylesheet" type="text/css" th:href="@{plugins/font-awesome-4.7.0/css/font-awesome.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{plugins/font-awesome-4.7.0/css/font-awesome.min.css}">
     <!-- Favicon  -->
     <link rel="icon" th:href="@{/static/images/logo/book_your_shelf_tab.png}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.css}">
@@ -199,11 +199,17 @@
             <div class="user-button-dropdown user-login-info">
                 <a href=""><img th:src="@{/static/images/core-img/user.svg}" alt=""></a>
                 <div class="user-button-dropdown-content">
-                    <a th:href="@{/register}" style="line-height: 40px">Register</a>
-                    <a th:href="@{/login}" style="line-height: 40px">Login</a>
-                    <a th:href="@{/profile}" style="line-height: 40px">Profile</a>
-                    <a th:href="@{/admin-panel}" style="line-height: 40px">Panel</a>
-                    <a th:href="@{/}" style="line-height: 40px">Logout</a>
+                    <div sec:authorize="isAnonymous()">
+                        <a href="/register" style="line-height: 40px">Register</a>
+                        <a href="/login" style="line-height: 40px">Login</a>
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a href="/admin-panel" style="line-height: 40px">Panel</a>
+                    </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <a href="/profile" style="line-height: 40px">Profile</a>
+                        <a href="/perform_logout" style="line-height: 40px">Logout</a>
+                    </div>
                 </div>
             </div>
 
