--- a/src/main/resources/templates/category-details.html
+++ b/src/main/resources/templates/category-details.html
@@ -35,7 +35,7 @@
         <!-- Classy Menu -->
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
-            <a href="index.html" class="book_your_shelf_logo">
+            <a href="/" class="book_your_shelf_logo">
                 <img src="images/logo/book_your_shelf_logo.png" alt="">
             </a>
             <!-- Navbar Toggler -->
