--- a/src/main/resources/templates/category-details.html
+++ b/src/main/resources/templates/category-details.html
@@ -37,7 +37,7 @@
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
             <a href="/" class="book_your_shelf_logo">
-                <img src="images/logo/book_your_shelf_logo.png" alt="">
+                <img th:src="@{/static/images/logo/book_your_shelf_logo.png}" alt="">
             </a>
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
