missing get names added

--- a/src/main/resources/templates/product_details/_information.html
+++ b/src/main/resources/templates/product_details/_information.html
@@ -1027,7 +1027,7 @@
                                             class="dropdown_item_select checkout_input"
                                             required="required">
                                         <option th:each="category : ${categoryService.getAllByCategory('Book')}"
-                                                th:value="${category}"
+                                                th:value="${category.getName()}"
                                                 th:text="${category.getName()}">category
                                         </option>
                                     </select>
@@ -1299,7 +1299,7 @@
                                             th:value="${product.getSubcategory()}"
                                             required="required">
                                         <option th:each="category : ${categoryService.getAllByCategory('E-Book')}"
-                                                th:value="${category}"
+                                                th:value="${category.getName()}"
                                                 th:text="${category.getName()}">category
                                         </option>
                                     </select>
@@ -1511,7 +1511,7 @@
                                             th:value="${product.getSubcategory()}"
                                             required="required">
                                         <option th:each="category : ${categoryService.getAllByCategory('Audio Book')}"
-                                                th:value="${category}"
+                                                th:value="${category.getName()}"
                                                 th:text="${category.getName()}">category
                                         </option>
                                     </select>
